--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API RestFull with mongoDb, ExpressJs y NodeJs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon index.js"
   },
   "author": "Johao Lopez",
   "license": "ISC",
